fixed align of text in button

--- a/src/base/submit-button/submit-button.less
+++ b/src/base/submit-button/submit-button.less
@@ -1,11 +1,13 @@
 @import "../../styles/config/globals";
 @import "../../styles/loading";
 .container {
+  display: flex;
   background: #FEDB43;
   flex-basis: 340px;
   border-radius: 6px;
   margin: 10px 2px 10px 0;
   .submit-button {
+    margin: auto;
     width: 100%;
     height:40px;
     cursor: pointer;
